# rust-buck3t-ui

./: .gitignore  Cargo.toml  LICENSE  README.md  example.env
docs/: index.html
docs/css/: style.css
docs/pages/: home.html  install-rust.html
src/: consts.rs  main.rs
src/routes/: health.rs  mod.rs  objects.rs  session.rs  upload.rs
static/: index.html
static/css/: auth.css  menubar.css  settings.css  sidebar.css  styles.css  upload.css  viewer.css
static/js/: api.js  app.js  auth.js  menubar.js  settings.js  sidebar.js  upload.js  viewer.js
