[package]
name = "rust-buck3t-ui"
version = "0.0.1"
edition = "2021"

[dependencies]
# core
actix-web = "*"
actix-files = "*"

# upload + forward
actix-multipart = "*"
percent-encoding = "*"
reqwest = { version = "*", features = ["json", "stream"] }

# serde/env/util
serde = { version = "*", features = ["derive"] }
serde_json = "*"
dotenvy = "*"
futures-util = "*"

